# patina

./: Cargo.toml  README.md
.github/: release-draft-config.yml
.github/workflows/: CrateVersionUpdater.yml  ReleaseTomlPr.yml  ReleaseWorkflow.yml  calculate-unsafe-code.yml  ci-workflow.yml  crate-version-update.yml  crate-version-updater.yml  label-issues.yml  label-sync.yml  publish-mdbook.yml  publish-release.yml  release-toml-pr.yml  rust-version-check.yml  test-mdbook.yml  triage-issues.yml  update-release-draft.yml
components/patina_adv_logger/: README.md
components/patina_adv_logger/src/: component.rs  lib.rs  logger.rs
components/patina_mm/src/: config.rs  lib.rs  protocol.rs
components/patina_performance/src/: config.rs
components/patina_samples/: Cargo.toml
components/patina_samples/src/: lib.rs  smbios_platform.rs
components/patina_smbios/: Cargo.toml  README.md
components/patina_smbios/src/: component.rs  error.rs  lib.rs  manager.rs  service.rs  smbios_record.rs
components/patina_smbios/src/manager/: core.rs  protocol.rs  record.rs
core/patina_debugger/: README.md
core/patina_internal_collections/src/: bst.rs  node.rs  rbt.rs  sorted_slice.rs
docs/src/: SUMMARY.md  introduction.md
patina_dxe_core/: Cargo.toml  build.rs
patina_dxe_core/examples/: std.rs
patina_dxe_core/src/: component_dispatcher.rs  decompress.rs  dispatcher.rs  dxe_services.rs  events.rs  fv.rs  hw_interrupt_protocol.rs  image.rs  lib.rs  misc_boot_services.rs  perf_timer.rs  runtime.rs  test_support.rs
sdk/patina/: Cargo.toml
sdk/patina_macro/: Cargo.toml
(+48 files in other folders)
